# GinBox

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  FILE_REFERENCE.md  INSTRUCTIONS.md  PROJECT_MAP.txt  PROJECT_SUMMARY.txt  README.md  REPO_MAP.md  VISUAL_IDENTITY_PROMPT.md
sokoul-backend/: .env.example  .gitignore  Cargo.toml  README.md
sokoul-backend/.sqlx/: query-014ec5b9c171efccdd8d1e55e8261f643a07b12ffee9fee737e7e8ce9f539413.json  query-0314095698983c0b9c8cb8bc3d56e5ac19ca83aab8946c626e790807f6f9dcf6.json  query-0522ced3d9629134060d0235a77dfd1840a87c8ec8c5f8c346c934f84f80ee79.json  query-0dfebb1e24eaedd4e4863887dc8d98f2ddee42cae032b978a6611cb5cf886ff1.json  query-145240cb3f31e7c66e609968e806fc784b6d16acad5d12162725007b221ba83f.json  query-151a5101b92909d738674358fbd4abff98cacbbf2bdee96e2a073239d38cc9a8.json  query-32865b3f340744147805c57040f1074d4e55bbca10f10cdeb24ff02213498c2f.json  query-44335ed233256321eb48c136d0aae55ba425c79fac843058906911b2cb3ed0db.json  query-457232c27b06f60a9213b0ec13baf4cf99bbbb175f2743f9380a7591cee47197.json  query-57f4b6ee0f6dd3ec2c1b321e7fe5110515951d003ce900a1a868264b1ea0b0ee.json  query-59acca1990e8c1278b559c83c704724c9d20fd988be1d5785707653a0d6e1897.json  query-6fbedec68b6a15b6e56ca835d8bc89709aba0ff32a44bcd5a821f88f5b9b71dd.json  query-7586cf684495388993cf8b626cb5bf7111b5397118fb00fa3daa19d03feca3f6.json  query-7c0490b809875e3152831f66b30dfd50e083d92478dd49c7df35d3f701397f40.json  query-7fc4b105b7b6f99d0457e6382c62140eb632513bf22c5d96868e20f32a7299a5.json  query-8f4342d09b5f4c394a307c7aa9e89871500133f7bb5e35e153fe3423ac6fdcbe.json  query-903e28adf445cdd1a4aca0309bb3418c1205e5c3eece9bfe1f64c51d47cf65dc.json  query-95a9ba61ca783d11e76a1d1218fae80da3e96fa96cfbb19586fc52013f235d54.json  query-af0fc2b991180a6a15d579ce694a3bfd4b0a42a3f544366070e82492f69b6ad9.json  query-b25673e0693b5fc53389839c893de2d7739d510597c83a4919d3efa76d2b7460.json  query-bc482f34da45e9b5a46e5717ad34e47299b5b404724a0866be793515ce00aae1.json  query-bf14abeb003af90b359c10e27e075c23ebc99ea7613b2ad09856f74725f6fce1.json  query-c0760a92b2e1d12bc38eb8b9d7e50ba335945df2f26678fc8cf8c97d54431331.json  query-c2ea4d7a422e4908cbe990c45ecfa343e6294ff1f5e1635a7106ed9fe56a2c56.json  query-cb6aa8996b7eb47dec0f1aa24abe9e69ba4e9859d24f47b47967e7e4481844ed.json  (+8 more)
sokoul-backend/migrations/: 0004_lists.sql  (+13 more)
(+443 files in other folders)
