[package]
name    = "sokoul-backend"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "sokoul-backend"
path = "src/main.rs"

[dependencies]
axum               = { version = "0.7.5",  features = ["macros"] }
tokio              = { version = "1.38",   features = ["full"] }
sqlx               = { version = "0.7.4",  features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
tower-http         = { version = "0.5.2",  features = ["cors", "trace", "compression-gzip"] }
reqwest            = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false }
serde              = { version = "1.0",    features = ["derive"] }
serde_json         = "1.0"
dotenvy            = "0.15"
thiserror          = "1.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",   features = ["env-filter"] }
aes-gcm            = "0.10"
dashmap            = "5.5"
uuid               = { version = "1.8",   features = ["v4"] }
chrono             = { version = "0.4",   features = ["serde"] }
regex              = "1.10"