[package]
name = "ptt-rs"
version = "0.1.0"
edition = "2024"
authors = ["Goldy"]
description = "A Rust port of PTT - a flexible toolkit for parsing and transforming torrent titles."
repository = "https://github.com/g0ldyy/ptt-rs"
license = "MIT"
readme = "README.md"
keywords = ["torrent", "parser", "parsing", "title"]
categories = ["text-processing", "parsing"]


[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
fancy-regex = "0.17.0"
once_cell = "1.21.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
